--- a/2.html
+++ b/2.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="2.css">
+    <script src="1.js"></script>
 </head>
 <body>
     <P>haha</P>
